--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "require": {
         "php": ">=7.4",
-        "illuminate/support": "~5|~6|~7|~8|~9"
+        "illuminate/support": "~5|~6|~7|~8|~9|~10"
     },
     "require-dev": {
         "phpunit/phpunit": ">=8",
